Excluded jackson jars and fixed JDK 21 List getFirst()
Signed-off-by: Chen Dai <daichen@amazon.com>